complete navigation components

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,1 +1,22 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  <span class="hidden md-block" fxHide.gt-xs>
+    <button mat-icon-button (click)="onToggleSidenav()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </span>
+  <a routerLink="/" class="navigation-item">Neighbours Socializer</a>
+  <span class="navigation-item space"></span>
+  <a routerLink="/events" class="navigation-item">Wydarzenia</a>
+  <a routerLink="/add-event" class="navigation-item">Dodaj wydarzenie</a>
+
+  <!--  <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>-->
+  <!--    <ul fxLayout fxLayoutGap="40px" class="navigation-items">-->
+  <!--      <li>-->
+  <!--        <a routerLink="/events">Wydarzenia</a>-->
+  <!--      </li>-->
+  <!--      <li>-->
+  <!--        <a routerLink="/add-event">Dodaj wydarzenie</a>-->
+  <!--      </li>-->
+  <!--    </ul>-->
+  <!--  </div>-->
+</mat-toolbar>
