--- a/src/app/navigation/sidenav/sidenav.component.html
+++ b/src/app/navigation/sidenav/sidenav.component.html
@@ -1,1 +1,10 @@
-<p>sidenav works!</p>
+<mat-nav-list>
+  <a mat-list-item routerLink="/events" (click)="onClose()">
+    <mat-icon>map</mat-icon>
+    <span class="nav-caption">Wydarzenia</span>
+  </a>
+  <a mat-list-item routerLink="/add-event" (click)="onClose()">
+    <mat-icon>add</mat-icon>
+    <span class="nav-caption">Dodaj wydarzenie</span>
+  </a>
+</mat-nav-list>
