--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'primeflex/primeflex.scss';
+@import './node_modules/leaflet/dist/leaflet.css';
 
 html,
 body {
