add base leaflet map

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import 'primeflex/primeflex.scss';
-//@import './node_modules/leaflet/dist/leaflet.css';
+@import '/node_modules/leaflet/dist/leaflet.css';
 
 html,
 body {
