--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,1 +1,5 @@
-<div style="height: 300px" leaflet [leafletOptions]="options"></div>
+<div class="grid mt-2">
+  <div id="map" class="col-offset-1 col-10" leaflet [leafletOptions]="options">
+    <div *ngFor="let layer of layers" [leafletLayer]="layer"></div>
+  </div>
+</div>
