--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
     <main>
       <router-outlet></router-outlet>
     </main>
-    <footer class="footer">Neighbours Socializer</footer>
+    <footer class="footer">© 2023 Neighbours Socializer</footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
