--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,5 +1,9 @@
-<div class="grid mt-2">
-  <div id="map" class="col-offset-1 col-10" leaflet [leafletOptions]="options">
-    <div *ngFor="let layer of layers" [leafletLayer]="layer"></div>
+<section>
+  <h1 class="col-offset-1 my-5">Wydarzenia</h1>
+
+  <div class="grid mt-2 mx-0">
+    <div id="map" class="col-offset-1 col-10" leaflet [leafletOptions]="options">
+      <div *ngFor="let layer of layers" [leafletLayer]="layer"></div>
+    </div>
   </div>
-</div>
+</section>
