--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -43,7 +43,12 @@
     </div>
 
     <div class="col-offset-2 col-8">
-      <div id="map" leaflet [leafletOptions]="options" (leafletClick)="onMapClick($event)">
+      <div
+        id="map"
+        leaflet
+        [leafletOptions]="options"
+        (leafletClick)="onMapClick($event)"
+        (leafletMapReady)="onMapReady($event)">
         <div [leafletLayer]="layer" *ngIf="layer"></div>
       </div>
     </div>
