--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -4,6 +4,7 @@
   <div class="grid mt-2 mx-0">
     <div id="map" class="col-offset-1 col-10" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
       <div *ngFor="let layer of layers" [leafletLayer]="layer"></div>
+      <div *ngIf="circleLayer" [leafletLayer]="circleLayer"></div>
     </div>
   </div>
 </section>
