--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -8,8 +8,18 @@
         <input matInput type="text" formControlName="name" />
       </mat-form-field>
     </div>
-
     <div class="col-4">
+      <mat-form-field appearance="fill">
+        <mat-label>Kategoria</mat-label>
+        <mat-select formControlName="category">
+          <mat-option *ngFor="let category of categories" [value]="category">
+            {{ category }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="col-offset-2 col-3">
       <mat-form-field>
         <mat-label>Data wydarzenia</mat-label>
         <input matInput [matDatepicker]="datePicker" formControlName="date" [min]="minDate" />
@@ -19,7 +29,7 @@
       </mat-form-field>
     </div>
 
-    <div class="col-offset-2 col-4">
+    <div class="col-3">
       <mat-form-field>
         <mat-label>Czas wydarzenia</mat-label>
         <input
@@ -34,7 +44,7 @@
       <ngx-mat-timepicker #timePicker></ngx-mat-timepicker>
     </div>
 
-    <div class="col-4">
+    <div class="col-2">
       <mat-form-field>
         <mat-label>Czas trwania</mat-label>
         <input matInput type="number" formControlName="duration" />
