--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   </span>
-  <a routerLink="/" class="navigation-item">Neighbours Socializer</a>
+  <a routerLink="/" class="navigation-item">We are locals</a>
   <span class="hidden sm:inline space"></span>
   <a routerLink="/events" class="hidden sm:inline navigation-item">Wydarzenia</a>
   <a routerLink="/add-event" class="hidden sm:inline navigation-item">Dodaj wydarzenie</a>
