--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -1,3 +1,11 @@
 #map {
-  height: 72vh;
+  height: 78vh;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.mat-mdc-form-field-subscript-wrapper {
+  height: 0;
 }
