--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,17 @@
       <main>
         <router-outlet></router-outlet>
       </main>
-      <footer class="footer">© 2023 We are locals</footer>
+      <footer class="footer">
+        <span>© 2023 We are locals</span>
+        <span>
+          Icons:
+          <a href="https://freeicons.io/profile/722">Fasil</a>,
+          <a href="https://freeicons.io/profile/8908">EDT.Graphics</a>,
+          <a href="https://freeicons.io/profile/6156">Reda</a>,
+          <a href="https://freeicons.io/profile/75801">Hilmy Abiyyu Asad</a>, on
+          <a href="https://freeicons.io">freeicons.io</a>
+        </span>
+      </footer>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
