--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,7 @@ mat-sidenav {
 }
 
 .footer {
+  font-size: 12px;
   position: absolute;
   left: 0;
   right: 0;
@@ -21,4 +22,9 @@ mat-sidenav {
   height: 30px;
   text-align: center;
   padding-top: 8px;
+
+  span {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
 }
