--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,8 +4,36 @@
       <mat-icon>menu</mat-icon>
     </button>
   </span>
-  <a routerLink="/" class="navigation-item">We are locals</a>
-  <span class="hidden sm:inline space"></span>
+  <a routerLink="/" class="navigation-item app-name">We are locals</a>
   <a routerLink="/events" class="hidden sm:inline navigation-item">Wydarzenia</a>
-  <a routerLink="/add-event" class="hidden sm:inline navigation-item">Dodaj wydarzenie</a>
+  <a *ngIf="username" routerLink="/add-event" class="hidden sm:inline navigation-item">Dodaj wydarzenie</a>
+  <a
+    *ngIf="!username"
+    routerLink="/add-event"
+    class="hidden sm:inline navigation-item"
+    matTooltip="Zaloguj się, aby dodać wydarzenie">
+    Dodaj wydarzenie
+  </a>
+  <span class="hidden sm:inline space"></span>
+  <span class="mr-4">{{ username }}</span>
+  <button
+    *ngIf="!username"
+    routerLink="/login"
+    class="hidden sm:inline"
+    (click)="login()"
+    mat-raised-button
+    color="accent">
+    <mat-icon>login</mat-icon>
+    Zaloguj
+  </button>
+  <button
+    *ngIf="username"
+    routerLink="/login"
+    class="hidden sm:inline"
+    (click)="logout()"
+    mat-raised-button
+    color="accent">
+    <mat-icon>power_settings_new</mat-icon>
+    Wyloguj
+  </button>
 </mat-toolbar>
