update app name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <router-outlet></router-outlet>
       </main>
       <footer class="footer">
-        <span>© 2023 We are locals</span>
+        <span>© 2023 We are Locals</span>
         <span>
           Icons:
           <a href="https://freeicons.io/profile/722">Fasil</a>,
