--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   </span>
-  <a routerLink="/" class="navigation-item app-name">We are locals</a>
+  <a routerLink="/" class="navigation-item app-name">We are Locals</a>
   <a routerLink="/events" class="hidden sm:inline navigation-item">Wydarzenia</a>
   <a *ngIf="username" routerLink="/add-event" class="hidden sm:inline navigation-item">Dodaj wydarzenie</a>
   <a
