display menu on smaller devices properly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
           <a href="https://freeicons.io/profile/722">Fasil</a>,
           <a href="https://freeicons.io/profile/8908">EDT.Graphics</a>,
           <a href="https://freeicons.io/profile/6156">Reda</a>,
-          <a href="https://freeicons.io/profile/75801">Hilmy Abiyyu Asad</a>, on
+          <a href="https://freeicons.io/profile/75801">Hilmy Abiyyu Asad</a> on
           <a href="https://freeicons.io">freeicons.io</a>
         </span>
       </footer>
