--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -26,7 +26,14 @@ button {
     height: 28px;
     width: 28px;
     font-size: 28px;
-    margin-top: 2px;
+    margin-top: 0;
     margin-right: 0;
+    margin-bottom: 4px;
   }
+}
+
+mat-icon.logo {
+  height: 45px;
+  width: 45px;
+  font-size: 45px;
 }
