display events on smaller devices properly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
       <main>
         <router-outlet></router-outlet>
       </main>
-      <footer class="footer">
-        <span>© 2023 We are Locals</span>
-        <span>
+      <footer>
+        <span class="pr-1 lg:px-4">© 2023 We are Locals</span>
+        <span class="pl-1 lg:px-4">
           Icons:
           <a href="https://freeicons.io/profile/722">Fasil</a>,
           <a href="https://freeicons.io/profile/8908">EDT.Graphics</a>,
