--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,5 +1,5 @@
 <section class="grid mx-0 mt-3 my-4">
-  <div class="col-offset-3 col-2 py-0">
+  <div class="lg:col-offset-2 col-12 sm:col-6 lg:col-3 py-0">
     <mat-form-field appearance="fill">
       <mat-label>Data wydarzenia</mat-label>
       <mat-date-range-input [rangePicker]="picker //noinspection ValidateTypes" [min]="minDate">
@@ -10,7 +10,7 @@
       <mat-date-range-picker #picker></mat-date-range-picker>
     </mat-form-field>
   </div>
-  <div class="col-2 py-0">
+  <div class="col-12 sm:col-6 lg:col-2 py-0">
     <mat-form-field appearance="fill">
       <mat-label>Kategoria</mat-label>
       <mat-select [formControl]="categoryFormControl">
@@ -20,7 +20,7 @@
       </mat-select>
     </mat-form-field>
   </div>
-  <div class="col-4 mt-2 py-0">
+  <div class="col-12 lg:col-5 mt-2 py-0 mb-3 lg:mb-0">
     <button mat-raised-button color="primary" class="mx-2" type="button" (click)="applyFilters()">
       <mat-icon>find_in_page</mat-icon>
       Zastosuj filtry
@@ -31,7 +31,7 @@
     </button>
   </div>
 
-  <div class="col-12 px-4 pt-0">
+  <div class="col-12 px-0 lg:px-4 pt-0">
     <div id="map" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
       <div *ngFor="let layer of layers" [leafletLayer]="layer"></div>
       <div *ngIf="circleLayer" [leafletLayer]="circleLayer"></div>
