--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
           <a href="https://freeicons.io/profile/8908">EDT.Graphics</a>,
           <a href="https://freeicons.io/profile/6156">Reda</a>,
           <a href="https://freeicons.io/profile/75801">Hilmy Abiyyu Asad</a> on
+          <a href="https://freeicons.io/profile/75801">ColourByteDesigns</a> on
+          <a href="https://freeicons.io/profile/75801">ColourCreatype</a> on
           <a href="https://freeicons.io">freeicons.io</a>
         </span>
       </footer>
